2009-07-22  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed the undefined reference error
	* test/HttpResponseTest.cc

2009-07-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	* Release 1.5.0

2009-07-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Russian, Italian, Danish, Bulgarian, Japanese and
	Ukrainian translations. Thanks to all translators.
	* po/ru.po
	* po/it.po
	* po/da.po
	* po/bg.po
	* po/ja.po
	* po/uk.po

2009-07-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing src/Logger.cc
	* src/Logger.cc

2009-07-18  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten Logger to avoiding constly virtual call.
	* src/LogFactory.cc
	* src/LogFactory.h
	* src/Logger.h
	* src/Makefile.am
	* src/Makefile.in
	* src/NullLogger.h: Removed.
	* src/SimpleLogger.cc
	* src/SimpleLogger.h

2009-07-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated doc
	* src/main.cc

2009-07-17  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated debug log message
	* src/AbstractCommand.cc
	* src/message.h

2009-07-16  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Avoid to create zombie process when commands specified in
	--on-download-* options are executed. Tested on Linux 2.6, Mac OS
	X and NetBSD.	
	* src/main.cc

2009-07-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Fixed typo
	* src/usage_text.h
	* doc/aria2c.1.txt

2009-07-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented 'errorCode' of tellStatus in man page.
	* doc/aria2c.1.txt

2009-07-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added 'errorCode' to the reponse of tellStatus xml-rpc method.
	This key is only available for stopped/completed downloads and its
	value is the error code defined in EXIT STATUS in man page.
	* src/XmlRpcMethodImpl.cc

2009-07-15  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>
